--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,26 @@ requests==2.18.4
 six==1.11.0
 typing==3.5.3.0
 urllib3==1.22
+botocore==1.8.32
+certifi==2017.11.5
+chalice==1.1.0
+chardet==3.0.4
+click==6.6
+docutils==0.14
+Flask==0.12.2
+httpie==0.9.9
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+jmespath==0.9.3
+MarkupSafe==1.0
+numpy==1.14.0
+pandas==0.22.0
+Pygments==2.2.0
+python-dateutil==2.6.1
+pytz==2017.3
+requests==2.18.4
+six==1.11.0
+typing==3.5.3.0
+urllib3==1.22
+Werkzeug==0.14.1
