--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,14 @@
+asn1crypto==0.24.0
 botocore==1.8.32
 certifi==2017.11.5
+cffi==1.11.4
 chalice==1.1.0
 chardet==3.0.4
 click==6.6
-docutils==0.14
-httpie==0.9.9
-idna==2.6
-jmespath==0.9.3
-numpy==1.14.0
-pandas==0.22.0
-Pygments==2.2.0
-python-dateutil==2.6.1
-pytz==2017.3
-requests==2.18.4
-six==1.11.0
-typing==3.5.3.0
-urllib3==1.22
-botocore==1.8.32
-certifi==2017.11.5
-chalice==1.1.0
-chardet==3.0.4
-click==6.6
+cryptography==2.1.4
 docutils==0.14
 Flask==0.12.2
+gunicorn==19.7.1
 httpie==0.9.9
 idna==2.6
 itsdangerous==0.24
@@ -31,7 +17,9 @@ jmespath==0.9.3
 MarkupSafe==1.0
 numpy==1.14.0
 pandas==0.22.0
+pycparser==2.18
 Pygments==2.2.0
+pyOpenSSL==17.5.0
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
@@ -39,4 +27,3 @@ six==1.11.0
 typing==3.5.3.0
 urllib3==1.22
 Werkzeug==0.14.1
-gunicorn==19.7.1
